2005-06-06  Benhur Stein <benhur@inf.ufsm.br>
	* Documentation/lang-paje/typeevent.tex: document new "RelationKey"
	  field that entities can have to identify related entities.
	* PajeSimulator/PajeSimul.h: add relatedEntities dictionary
	* PajeSimulator/PajeSimul.m: -outputEntity:, -addRelatedEntity:toKey:,
	  -relatedEntitiesToEntity: new methods
	* StorageController/Encapsulate.m: removed -relatedEntitiesToEntity:
	  method (taken over by simulator)

2005-06-06  Benhur Stein <benhur@inf.ufsm.br>
	* PajeSimulator/PajeSimul.m (-rootInstance): implemented to return
	  rootContainer
	* SpaceTimeViewer/DrawView+Mouse.m: remove unused notification
	* SpaceTimeViewer/DrawView.[hm]: removed -rootInstance method; changed
	  calls to ask filter
	* SpaceTimeViewer/STController.m: remove obsolete fileSelected
	  notification
	* StorageController/Encapsulate.[hm]: removed local startTime, endTime
	  and rootInstance variables; changed uses to ask previous component
	  (simulator); also removed unused entityTypeToClass variable.
	  removed obsolete PajeFilenameNotification.

2005-05-22  Benhur Stein <benhur@inf.ufsm.br>
	* ContainerFilter/ContainerSelector.m: code reformating
	* EntityTypeFilter/EntityTypeSelector.m: code reformating, remove
	  call to colorChanged.. when droping color, it will come
	  automatically from previous filters.
	* General/PajeEntity.m: moved inspect method to Encapsulator's
	  -inspectEntity:
	* General/PajeEntityInspector.h: declared outlets and new/changed
	  methods
	* General/PajeEntityInspector.m: changed window layout a bit,
	  corrected some memory leaks, changed way of starting inspection --
	  now the filter is known and integration is better (mainly for
	  changing colors)
	* General/PajeEntityInspector.gorm: layout changes
	* Paje/PajeController.m: enabled alpha channel in color panel, now
	  entities can be semi-transparent.
	* ReductionFilter/ReduceEntityInspector.{h,m,gorm}: layout changes